refactor: reducing code